css/style.css
body {
  background: silver;
  color: white;
}

h1 {
  display: inline-flex;
}

.typedTitle {
  text-align: center;
  display: inline-flex;
  font-family: 'Bad Script', cursive;
}

/* Font References

font-family: 'Caveat', cursive;
font-family: 'Bad Script', cursive;
font-family: 'Comfortaa', cursive;
font-family: 'Slabo 27px', serif;

*/

